--- a/package.json
+++ b/package.json
@@ -35,13 +35,15 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-functional": "^3.0.2",
     "eslint-plugin-jest": "^24.0.1",
-    "eslint-plugin-jsdoc": "^30.5.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-sonarjs": "^0.5.0",
     "eslint-plugin-tsdoc": "^0.2.7",
-    "eslint-plugin-unicorn": "^21.0.0"
+    "eslint-plugin-unicorn": "^21.0.0",
+    "js-yaml": "^3.14.0",
+    "typescript": "^3"
   }
 }
